* Merging in KRDC VNC fixes which fix some bugs with wrong colors. Fixes by Wouter Van Meir.

BUG:247149

svn path=/branches/KDE/4.5/kdenetwork/krdc/; revision=1186718